<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/pb_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

        <LinearLayout
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_logo"/>

            <LinearLayout
                android:layout_marginTop="32dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_register_fullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:inputType="text"
                        android:hint="@string/register_input_name" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_register_no_hp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:inputType="number"
                        android:hint="@string/register_input_phone" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_register_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:inputType="textEmailAddress"
                        android:hint="@string/register_input_email" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:inputType="textPassword"
                        android:hint="@string/register_input_password" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_register_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:inputType="textPassword"
                        android:hint="@string/register_input_cpassword" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnRegisterSignup"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:layout_marginTop="32dp"
                android:textColor="@color/defaultWhite"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_signup"/>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>