<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/backgound_popup_dialog"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_popup_accepted"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/bp_splashbg"
            android:padding="45dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_register_success" />

        <TextView
            android:id="@+id/tv_popup_accepted_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/register_dialog_success_title"
            android:textAlignment="center"
            android:textColor="@color/bp_green"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_popup_accepted_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/register_dialog_success_content"
            android:textAlignment="center"
            android:textColor="@color/bp_black_cc"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnNextLogin"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:layout_marginTop="32dp"
            android:textColor="@color/defaultWhite"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_next_login"/>

    </LinearLayout>

</ScrollView>