<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/homepageContent1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/btnNearestSPBU"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/LayoutBrightPointCardview"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/homepage_nearest_spbu"
                android:src="@drawable/ic_nearest_spbu"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/homepage_nearest_spbu"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnBookAWash"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/LayoutBrightPointCardview"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/homepage_book_a_wash"
                android:src="@drawable/ic_carwash"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/homepage_book_a_wash"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/homepageContent2"
        android:layout_below="@+id/homepageContent1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/btnWashSchedule"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/LayoutBrightPointCardview"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/homepage_wash_schedule"
                android:src="@drawable/ic_book_carwash"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/homepage_wash_schedule"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnAccount"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/LayoutBrightPointCardview"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/homepage_account"
                android:src="@drawable/ic_account"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/homepage_account"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>